    - src/onmainwindow.cpp: revert 3060183a78d8b6bd81bec9968c985c38bfd1e5c2.
      Being able to suspend sessions via the close button is complex and
      unnecessary, since in thinclient mode, for which this feature is
      useful, users will not be able to see the client window while a session
      is executing, due to it running in full screen mode.

  [ Oleksandr Shneyder ]
  * New upstream version (4.1.1.1):
    - Change echo mode for user input in InteractionDialog.

  [ Walid Moghrabi ]
  * New upstream version (4.1.1.1):
    - {res/img/png/,res/resources.qrc}: add close-button.png file.
    - {src/{help.cpp,onmainwindow.{cpp,h}},man/man1/x2goclient.1}: add new
      option --closebt. Fixes: #1227. Adds a close button in the top-left
      client corner (maybe next to the halt button) that currently just
      terminates the client.

 -- X2Go Release Manager <git-admin@x2go.org>  Sun, 29 Oct 2017 11:44:44 +0100

x2goclient (4.1.1.0-0x2go1) unstable; urgency=medium

  [ Mihai Moldovan ]
  * New upstream version (4.1.1.0):
    - src/sshmasterconnection.cpp: use ssh_channel_listen_forward () instead
      of ssh_forward_listen () for newer libssh versions. Fixes: #870.
    - src/sshmasterconnection.cpp: with libssh 0.6.0 and newer, get the public
      key via ssh_get_server_publickey () (0.8.0 and higher) or
      ssh_get_publickey () (0.7.x and lower) and its hash via
      ssh_get_publickey_hash () instead of using the deprecated
      ssh_get_pubkey_hash () function. Additionally, replace free () with the
      more appropriate ssh_string_free_char () function after using
      ssh_get_hexa (). This will break on very old systems with a hopelessly
      outdated libssh version, but we do not care about these systems in the
      first place.
    - src/sshmasterconnection.cpp: replace string_free () with its successor
      ssh_string_free (). Will break on ancient systems, but we don't care.